chore: clean stray backup files; update README with Pages URL; tweak homepage copy

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <h1>Polyglot Starter Web</h1>
-      <p>Your Vercel deployment is ready.</p>
+  <p>Deployed via GitHub Pages. API routes can be added later.</p>
     </main>
   </body>
 </html>
